# vtexdocs-guardrails

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vtexdocs_guardrails/: __init__.py  config.py  server.py  validator.py
tests/: __init__.py  test_server.py  test_validator.py
